# controller/noticesController.js
@@ -4,40 +4,47 @@ const { httpError, ctrlWrapper } = require('../helpers');
 
 const listAllNotice = async (req, res) => {
   const result = await Notice.find({}, '-createdAt -updatedAt');
+
   if (!result) {
     throw httpError(404, `Notices not found`);
   }
+
   res.json(result);
 };
 
 const getNoticeByCategory = async (req, res) => {
-  console.log('getNoticeByCategory');
   const { category } = req.params;
-  console.log('category CTRL');
+
   const result = await Notice.find({ category });
+
   if (!result) {
     throw httpError(404, `${category} not found`);
   }
+
   res.json(result);
 };
 
 const getNoticeById = async (req, res) => {
-  console.log('getNoticeById');
   const { id } = req.params;
+
   const result = await Notice.findById(id);
-  console.log('id find');
+
   if (!result) {
     throw httpError(404, `${id} not found`);
   }
+
   res.json(result);
 };
 
 const addNotice = async (req, res) => {
   const { _id: owner } = req.user;
+
   const result = await Notice.create({ ...req.body, owner });
+
   if (!result) {
     throw httpError(404, `Blablabla not found`);
   }
+
   res.status(201).json(result);
 };
 
